tests/reference/asr-generics_error_01-1e05cd6.stderr
semantic error: Type mismatch in procedure call; the types must be compatible
  --> tests/errors/generics_error_01.py:12:9
   |
12 | print(f(1,"a"))
   |         ^ type mismatch (passed argument type is i32 but required type is T)
   |
 9 | def f(x: T, y: T) -> T:
   |          ^ type mismatch (passed argument type is i32 but required type is T)
